syntax = "proto3";

package hilo_rpc.proto;

message LocalFileConfig {
  string path = 1;
}

message SqliteConfig {
  string path = 1;
}

message ConnectorConfig {
  oneof config {
    LocalFileConfig local_file = 1;
  }
}